--- a/CompleteAspnetCore31/Views/Shared/_Layout.cshtml
+++ b/CompleteAspnetCore31/Views/Shared/_Layout.cshtml
@@ -25,6 +25,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Manage
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item text-dark" asp-controller="LeaveTypes" asp-action="Index">Leave Type</a>
+                                <a class="dropdown-item text-dark" href="#">Leave Allocations</a>
+                                <a class="dropdown-item text-dark" href="#">Leave Applications</a>
+                                <a class="dropdown-item text-dark" href="#">Employees</a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
